fix(recipes): use null-tolerant map for setVariable migration
Map.of throws NullPointerException on null values, but Camunda 7
TaskService#setVariable accepts null. Emit Collections.singletonMap in
the migrated setVariables call so null values are preserved.

related to #1556

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>